<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mihai.colorcodecreator.FabDialogFragment">

    <TextView
        android:id="@+id/fabNume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/fab_nume_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/fabCod"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintRight_toLeftOf="@+id/fabTarget"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintHorizontal_chainStyle="spread_inside" />

    <EditText
        android:id="@+id/fabInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/fab_input_text"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fabCod"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/fabTarget"
        android:layout_width="100dp"
        android:layout_height="20dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/fabNume"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/fabNume"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/fabCod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/fab_cod_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/fabInput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fabNume"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>
